--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+  <!-- Start Header Section -->
   <header class="h-screen">
     <div class="container flex mx-auto px-4 py-2 pt-4 md:px-8  justify-between flex-wrap">
       <div class="md:pl-5 lg:pl-8">
@@ -49,7 +50,7 @@
       </div>
     </div>
   </header>
-
+  <!-- End Header Section -->
 </body>
 
 </html>
