Responsive header Section

--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,14 @@
 <body>
   <!-- Start Header Section -->
   <header class="h-screen">
-    <div class="container flex mx-auto px-4 py-2 pt-4 md:px-8  justify-between flex-wrap">
-      <div class="md:pl-5 lg:pl-8">
-        <a href="#" class="text-2xl py-2">
-          <i class="fa fa-diamond text-2xl mx-2" aria-hidden="true"></i>
-          <span class="font-bold">Marvel</span>
+    <div class="container flex mx-auto navbar ">
+      <div class="mx-4">
+        <a href="#" class="text-2xl">
+          <i class="fa fa-diamond text-2xl" aria-hidden="true"></i>
+          <span class="font-bold">Logo</span>
         </a>
       </div>
-      <label for="menu-toggle" class="block md:hidden cursor-pointer mr-2 self-center">
+      <label for="menu-toggle" class="block md:hidden cursor-pointer  self-center">
         <svg class="fill-current text-gray-900" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
           viewBox="0 0 20 20">
           <title>menu</title>
@@ -49,12 +49,28 @@
         </div>
       </div>
     </div>
-    <div>
-      <div>
-        <span>Wellcome to my profilo website!</span>
-        <h1>Hey I'am WebDeveloper</h1>
+    <div class="container flex sm:mx-auto px-4 pt-24 py-2 justify-between flex-wrap ">
+      <div class="px-2 py-2 sm: mx-auto sm:w-auto md:w-1/2 ">
+        <span class="font-bold font-serif">Wellcome to my profilo web site!</span>
+        <h1 class="text-4xl font-semibold my-4">Hey I'am Web Developer</h1>
+        <p class="mb-4 text-justify">
+          Creating a successful digital product is tough. Only 30% of new digital products succeed in attracting enough
+          customers to be profitable. Because of the high failure rate, the only sensible strategy is to create a
+          minimum viable product MVP and test it. However, even the path should to creating digital MVP creating is
+          filled with obstacle.
+
+        </p>
+        <div class="w-full">
+          <button class="w-full p-2 mb-2 sm:w-auto mr-2 bg-gray rounded-md shadow-md">
+            <i class="fa fa-file-text-o"></i>
+            Download Resume</button>
+          <button class="w-full px-4 py-2 sm:w-auto bg-gray rounded-lg shadow-md">get a free
+            quote</button>
+        </div>
       </div>
-      <div><span></span></div>
+      <div class="w-full m-8 mx-auto md:w-1/2 flex justify-center">
+        <img src="images/header.svg" alt="" class="lg:w-4/5 sm:max-w-sm md:ma-w-sm lg:max-w-sm">
+      </div>
     </div>
   </header>
   <!-- End Header Section -->
